--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,7 @@ install:
   # the first package to install (for every conda install command) otherwise
   # numpy may be automatically upgraded.
 
-  - conda install --yes pytest
-  - pip install coverage
+  - conda install --yes pytest coverage flake8
 
   # You can also install some dependencies with pip if not available in conda
 
@@ -50,6 +49,7 @@ script:
 
   - pytest  # will run all tests in the package
   - coverage run --branch -m pytest
+  - flake8
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
